--- a/mw.html
+++ b/mw.html
@@ -18,14 +18,18 @@
           <div class="feature-image"
                style="background-image:url(images/modern_comforts.png);">
           </div>
+          Modern Comforts
         </div>
         <div class="featured-site">
           <div class="feature-image"
                style="background-image:url(images/oppia-music.png);">
           </div>
+          Oppia
         </div>
         <div class="featured-site">
-          <div class="feature-image"></div>
+          <div class="feature-image">
+          </div>
+          Something Else
         </div>
       </div>
     </div>
