Add titles and hover styling to links.

--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
       <div class="mission-statement">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
       </div>
-      <div class="feature-container">
-        <div class="featured-site">
-          <div class="feature-image"
+      <div class="featured-container">
+        <a href="#" class="featured-site">
+          <div class="featured-image"
                style="background-image:url(images/modern_comforts.png);">
           </div>
-          Modern Comforts
-        </div>
-        <div class="featured-site">
-          <div class="feature-image"
+          <div class="featured-title">Modern Comforts</div>
+        </a>
+        <a href="#" class="featured-site">
+          <div class="featured-image"
                style="background-image:url(images/oppia-music.png);">
           </div>
-          Oppia
-        </div>
-        <div class="featured-site">
-          <div class="feature-image">
+          <div class="featured-title">Oppia</div>
+        </a>
+        <a href="#" class="featured-site">
+          <div class="featured-image">
           </div>
-          Something Else
-        </div>
+          <div class="featured-title">Something Else</div>
+        </a>
       </div>
     </div>
     <div class="footer">
