--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           </div>
           <div class="featured-title">Modern Comforts</div>
         </a>
-        <a href="#" class="featured-site">
+        <a href="https://www.oppia.org/explore/9" target="_blank" class="featured-site">
           <div class="featured-image"
                style="background-image:url(images/oppia-music.png);">
           </div>
