Add link paths.

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
       </div>
       <div class="featured-container">
-        <a href="#" class="featured-site">
+        <a href="http://michaelwagner.github.io/modern-comforts/"
+           class="featured-site">
           <div class="featured-image"
                style="background-image:url(images/modern_comforts.png);">
           </div>
           <div class="featured-title">Modern Comforts</div>
         </a>
-        <a href="https://www.oppia.org/explore/9" target="_blank" class="featured-site">
+        <a href="https://www.oppia.org/explore/9" target="_blank"
+           class="featured-site">
           <div class="featured-image"
                style="background-image:url(images/oppia-music.png);">
           </div>
