--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <body>
     <div class="navbar">
+      <div class="logo" style="background-image:url(images/mw-logo-clean.svg);"></div>
     </div>
     <div class="container">
       <div class="mission-statement">
@@ -15,13 +16,15 @@
       </div>
       <div class="featured-container">
         <a href="http://michaelwagner.github.io/modern-comforts/"
+           target="_blank"
            class="featured-site">
           <div class="featured-image"
                style="background-image:url(images/modern_comforts.png);">
           </div>
           <div class="featured-title">Modern Comforts</div>
         </a>
-        <a href="https://www.oppia.org/explore/9" target="_blank"
+        <a href="https://www.oppia.org/explore/9"
+           target="_blank"
            class="featured-site">
           <div class="featured-image"
                style="background-image:url(images/oppia-music.png);">
