Change background color to white, text color to balc, change logo.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 
   <body>
     <div class="navbar">
-      <div class="logo" style="background-image:url(images/mw-logo-clean.svg);"></div>
+<!--       <span class="nav-links">
+        <a href="#" class="nav-menu-link-bio">Bio</a>
+        <a href="#" class="nav-menu-link-projects">Projects</a>
+        <a href="#" class="nav-menu-link-contact">Contact</a> -->
+      <div class="logo" style="background-image:url(images/mw-logo-black.svg);">
+      </div>
     </div>
     <div class="container">
       <div class="mission-statement">
