--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
   <head>
-    <meta>
-      <title>Michael Wagner</title>
-    </meta>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
+    <title>Michael Wagner</title>
     <link href="css/mw.css" rel="stylesheet">
   </head>
 
@@ -26,7 +26,9 @@
           <div class="featured-image"
                style="background-image:url(images/modern_comforts.png);">
           </div>
-          <div class="featured-title">Modern Comforts</div>
+          <div class="featured-title">Modern Comforts
+            <div class="spinner">+</div>
+          </div>
         </a>
         <a href="https://www.oppia.org/explore/9"
            target="_blank"
@@ -34,19 +36,23 @@
           <div class="featured-image"
                style="background-image:url(images/oppia-music.png);">
           </div>
-          <div class="featured-title">Oppia</div>
+          <div class="featured-title">Oppia
+            <div class="spinner">+</div>
+          </div>
         </a>
         <a href="#" class="featured-site">
           <div class="featured-image">
           </div>
-          <div class="featured-title">Something Else</div>
+          <div class="featured-title">Something Else
+            <div class="spinner">+</div>
+          </div>
         </a>
       </div>
-    </div>
-    <div class="footer">
-      <div class="footer-row">
-        <span class="copyright">Michael Wagner &copy; 2014</span>
-        <span class="contact"><a href="#contact">wagnerdmike@gmail.com</a></span>
+      <div class="footer">
+        <div class="footer-row">
+          <span class="copyright">Michael Wagner &copy; 2014</span>
+          <span class="contact"><a href="#contact">wagnerdmike@gmail.com</a></span>
+        </div>
       </div>
     </div>
   </body>
