More resposive adjustments to columns.

--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
 
   <body>
     <div class="navbar">
-<!--       <span class="nav-links">
-        <a href="#" class="nav-menu-link-bio">Bio</a>
-        <a href="#" class="nav-menu-link-projects">Projects</a>
-        <a href="#" class="nav-menu-link-contact">Contact</a> -->
+<!--       <ul class="nav-links">
+        <li><a href="#" class="nav-menu-link-bio">Bio</a></li>
+        <li><a href="#" class="nav-menu-link-projects">Projects</a></li>
+        <li><a href="#" class="nav-menu-link-contact">Contact</a></li>
+      </ul> -->
       <div class="logo" style="background-image:url(images/mw-logo-black.svg);">
       </div>
     </div>
     <div class="container">
       <div class="mission-statement">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        A passionate full-stack developer who looks to convey complex ideas
+        through simplicity.
       </div>
       <div class="featured-container">
         <a href="http://michaelwagner.github.io/modern-comforts/"
