--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
 
   <body>
     <div class="navbar">
-<!--       <ul class="nav-links">
-        <li><a href="#" class="nav-menu-link-bio">Bio</a></li>
-        <li><a href="#" class="nav-menu-link-projects">Projects</a></li>
-        <li><a href="#" class="nav-menu-link-contact">Contact</a></li>
-      </ul> -->
-      <div class="logo" style="background-image:url(images/mw-logo-black.svg);">
+      <div class="nav-container">
+        <div class="logo" style="background-image:url(images/mw-logo-black.svg);">
+        </div>
+        <ul class="nav-links">
+          <!-- <li><a href="#" class="nav-menu-link bio-link">Bio</a></li> -->
+          <li><a href="#" class="nav-menu-link projects-link">Projects</a></li>
+          <li><a href="#" class="nav-menu-link contact-link">Contact</a></li>
+          <!-- <li><a href="#" class="nav-menu-link lab-link">Lab</a></li> -->
+        </ul>
       </div>
     </div>
     <div class="container">
       <div class="mission-statement">
-        A passionate full-stack developer who looks to convey complex ideas
+        A passionate developer conveying complex ideas
         through simplicity.
       </div>
       <div class="featured-container">
