Position nav-links.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         </div>
         <ul class="nav-links">
           <!-- <li><a href="#" class="nav-menu-link bio-link">Bio</a></li> -->
-          <li><a href="#" class="nav-menu-link projects-link">Projects</a></li>
-          <li><a href="#" class="nav-menu-link contact-link">Contact</a></li>
+          <li><a href="#" class="nav-menu-link projects-link">PROJECTS</a></li>
+          <li><a href="#" class="nav-menu-link contact-link">CONTACT</a></li>
           <!-- <li><a href="#" class="nav-menu-link lab-link">Lab</a></li> -->
         </ul>
       </div>
