Add nav-collapse menu.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
         <div class="logo" style="background-image:url(images/mw-logo-black.svg);">
         </div>
         <ul class="nav-links">
-          <!-- <li><a href="#" class="nav-menu-link bio-link">Bio</a></li> -->
           <li><a href="#" class="nav-menu-link projects-link">PROJECTS</a></li>
           <li><a href="#" class="nav-menu-link contact-link">CONTACT</a></li>
-          <!-- <li><a href="#" class="nav-menu-link lab-link">Lab</a></li> -->
+        </ul>
+        <ul class="nav-collapse">
+          <li></li>
+          <li></li>
+          <li></li>
         </ul>
       </div>
     </div>
