Add new logo placeholder.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="navbar">
       <div class="nav-container">
-        <div class="logo" style="background-image:url(images/mw-logo-black.svg);">
+        <div class="logo" style="background-image:url(images/MW-logo-1.png);">
         </div>
         <ul class="nav-links">
           <li><a href="#" class="nav-menu-link projects-link">PROJECTS</a></li>
