Make new logo responsive.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <div class="navbar">
       <div class="nav-container">
-        <div class="logo" style="background-image:url(images/MW-logo-1.png);">
-        </div>
+        <a href="/"><div class="logo" style="background-image:url(images/MW-logo-1.png);">
+        </div></a>
         <ul class="nav-links">
           <li><a href="#" class="nav-menu-link projects-link">PROJECTS</a></li>
           <li><a href="#" class="nav-menu-link contact-link">CONTACT</a></li>
