Add responsive styles for logo and spinners.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <div class="navbar">
       <div class="nav-container">
-        <a href="/"><div class="logo" style="background-image:url(images/MW-logo-1.png);">
-        </div></a>
+        <a href="" class="logo" style="background-image:url(images/MW-logo-1.png);">
+        </a>
         <ul class="nav-links">
           <li><a href="#" class="nav-menu-link projects-link">PROJECTS</a></li>
           <li><a href="#" class="nav-menu-link contact-link">CONTACT</a></li>
@@ -34,7 +34,7 @@
           <div class="featured-image"
                style="background-image:url(images/modern_comforts.png);">
           </div>
-          <div class="featured-title">Modern Comforts
+          <div class="featured-title">MODERN COMFORTS
             <div class="spinner">+</div>
           </div>
         </a>
@@ -44,14 +44,14 @@
           <div class="featured-image"
                style="background-image:url(images/oppia-music.png);">
           </div>
-          <div class="featured-title">Oppia
+          <div class="featured-title">OPPIA
             <div class="spinner">+</div>
           </div>
         </a>
         <a href="#" class="featured-site">
           <div class="featured-image">
           </div>
-          <div class="featured-title">Something Else
+          <div class="featured-title">SOMETHING ELSE
             <div class="spinner">+</div>
           </div>
         </a>
