Add mail functionality to contact page.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </a>
         <ul class="nav-links">
           <li><a href="#" class="nav-menu-link projects-link">PROJECTS</a></li>
-          <li><a href="#" class="nav-menu-link contact-link">CONTACT</a></li>
+          <li><a href="contact.html" class="nav-menu-link contact-link">CONTACT</a></li>
         </ul>
         <ul class="nav-collapse">
           <li></li>
@@ -59,7 +59,7 @@
       <div class="footer">
         <div class="footer-row">
           <span class="copyright">Michael Wagner &copy; 2014</span>
-          <span class="contact"><a href="#contact">wagnerdmike@gmail.com</a></span>
+          <span class="contact-email"><a href="wagnerdmike@gmail.com">wagnerdmike@gmail.com</a></span>
         </div>
       </div>
     </div>
