Change contact form action.

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
     </div>
     <div class="container">
       <div id="response"></div>
-      <form id="contactForm" action="/forms.brace.io/wagnerdmike@gmail.com">
+      <form id="contactForm">
         <label for="name">NAME:</label>
         <input type="text" name="name" id="name" placeholder="Name" required><br />
 
