--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="navbar">
       <div class="nav-container">
-        <a href="" class="logo" style="background-image:url(images/MW-logo-1.png);">
+        <a href="http://michaelwagner.github.io/michael-wagner/" class="logo" style="background-image:url(images/MW-logo-1.png);">
         </a>
         <ul class="nav-links">
           <li><a href="#" class="nav-menu-link projects-link">PROJECTS</a></li>
