Remove Contact js and add hover events for mobile-nav.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
     <title>Michael Wagner</title>
+    <!--[if lt IE 9]>
+      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
     <link href="css/mw.css" rel="stylesheet">
   </head>
 
@@ -15,11 +18,17 @@
           <li><a href="#" class="nav-menu-link projects-link">PROJECTS</a></li>
           <li><a href="contact.html" class="nav-menu-link contact-link">CONTACT</a></li>
         </ul>
-        <ul class="nav-collapse">
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
+        <a class="mobile-nav" href="#mobile-nav">
+          <ul class="nav-collapse">
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </a>
+<!--         <ul class="nav-dropdown">
+          <li><a href="#" class="mobile-nav-menu-link mobile-projects">PROJECTS</a></li>
+          <li><a href="contact.html" class="mobile-nav-menu-link mobile-contact">CONTACT</a></li>
+        </ul> -->
       </div>
     </div>
     <div class="container">
