--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,10 @@
 
     <script src="/js/emailer.js"></script>
 
+    <!--[if lt IE 9]>
+      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
     <link href="css/mw.css" rel="stylesheet">
 
   </head>
