Make logo 25% smaller and remove email link on home page.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="footer">
         <div class="footer-row">
           <span class="copyright">Michael Wagner &copy; 2014</span>
-          <span class="contact-email"><a href="wagnerdmike@gmail.com">wagnerdmike@gmail.com</a></span>
+<!--           <span class="contact-email"><a href="wagnerdmike@gmail.com">wagnerdmike@gmail.com</a></span> -->
         </div>
       </div>
     </div>
