Fix mobile navigation and responsivity.

--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,10 @@
   <head>
     <title>Contact Form</title>
     <!-- We need the hosted versions of jQuery and the Parse library -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="http://www.parsecdn.com/js/parse-1.2.16.min.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <!-- // <script src="http://www.parsecdn.com/js/parse-1.2.16.min.js"></script> -->
 
-    <script src="/js/emailer.js"></script>
+    <!-- // <script src="/js/emailer.js"></script> -->
 
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
