--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div id="sidr" class="sidr">
             <ul>
               <li><a href="#">Projects</a><li>
-              <li><a href="#">Contact</a><li>
+              <li><a href="contact.html">Contact</a><li>
             </ul>
           </div>
         </div>
@@ -76,7 +76,7 @@
         </div>
       </div>
     </div>
-    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+    <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/jquery.sidr.min.js"></script>
     <script src="js/menu-toggle.js"></script>
   </body>
