Fix extra li in index and height of mobile-nav links.

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           </a>
           <div id="sidr" class="sidr">
             <ul>
-              <li><a href="#">Projects</a><li>
-              <li><a href="contact.html">Contact</a><li>
+              <li><a href="#">Projects</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
