Add mobile-nav to contact page. FIx logo position on resize.

--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,9 @@
 <!doctype html>
   <head>
-    <title>Contact Form</title>
-    <!-- We need the hosted versions of jQuery and the Parse library -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
+    <title>Michael Wagner</title>
     <script src="js/jquery.min.js"></script>
-    <!-- // <script src="http://www.parsecdn.com/js/parse-1.2.16.min.js"></script> -->
 
     <!-- // <script src="/js/emailer.js"></script> -->
 
@@ -11,44 +11,55 @@
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
+    <link href="css/sidr.css" rel="stylesheet">
     <link href="css/mw.css" rel="stylesheet">
 
   </head>
 
   <body>
-    <div class="navbar">
-      <div class="nav-container">
-        <a href="http://michaelwagner.github.io/michael-wagner/" class="logo" style="background-image:url(images/MW-logo-1.png);">
-        </a>
-        <ul class="nav-links">
-          <li><a href="#" class="nav-menu-link projects-link">PROJECTS</a></li>
-          <li><a href="contact.html" class="nav-menu-link contact-link">CONTACT</a></li>
-        </ul>
-        <ul class="nav-collapse">
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
+    <div class="site-wrapper">
+      <div class="navbar">
+        <div class="nav-container">
+          <a href="http://michaelwagner.github.io/michael-wagner/" class="logo" style="background-image:url(images/MW-logo-1.png);">
+          </a>
+          <ul class="nav-links">
+            <li><a href="#" class="nav-menu-link projects-link">PROJECTS</a></li>
+            <li><a href="contact.html" class="nav-menu-link contact-link">CONTACT</a></li>
+          </ul>
+          <a class="mobile-nav toggle-nav" href="#sidr">
+            <ul class="nav-collapse">
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </a>
+          <div id="sidr" class="sidr">
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="#">Projects</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div id="response"></div>
+        <form id="contactForm">
+          <label for="name">NAME:</label>
+          <input type="text" name="name" id="name" placeholder="Name" required><br />
+
+          <label for="emailAddress">EMAIL ADDRESS:</label>
+          <input type="email" name="email" id="email" placeholder="Email address" required><br />
+
+          <label for="message">MESSAGE</label>
+          <textarea name="message" id="message" rows="5" cols="10" placeholder="Your message" required></textarea><br />
+
+          <button type="submit" class="submit-button" value="Send">SEND</button>
+        </form>
       </div>
     </div>
-    <div class="container">
-      <div id="response"></div>
-      <form id="contactForm">
-        <label for="name">NAME:</label>
-        <input type="text" name="name" id="name" placeholder="Name" required><br />
-
-        <label for="emailAddress">EMAIL ADDRESS:</label>
-        <input type="email" name="email" id="email" placeholder="Email address" required><br />
-
-        <label for="message">MESSAGE</label>
-        <textarea name="message" id="message" rows="5" cols="10" placeholder="Your message" required></textarea><br />
-
-        <button type="submit" class="submit-button" value="Send">SEND</button>
-      </form>
-    </div>
-
-    <script src="http://www.parsecdn.com/js/parse-1.2.12.min.js"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-    <script src="/js/app.js"></script>
+    <script src="js/jquery.min.js" type="text/javascript"></script>
+    <script src="js/jquery.sidr.min.js"></script>
+    <script src="js/menu-toggle.js"></script>
   </body>
 </html>
