FIx logo position and add products page.

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
           <a href="http://michaelwagner.github.io/michael-wagner/" class="logo" style="background-image:url(images/MW-logo-1.png);">
           </a>
           <ul class="nav-links">
-            <li><a href="#" class="nav-menu-link projects-link">PROJECTS</a></li>
+            <li><a href="products.html" class="nav-menu-link projects-link">PROJECTS</a></li>
             <li><a href="contact.html" class="nav-menu-link contact-link">CONTACT</a></li>
           </ul>
           <a class="mobile-nav toggle-nav" href="#sidr">
@@ -35,9 +35,8 @@
           </a>
           <div id="sidr" class="sidr">
             <ul>
+              <li><a href="products.html">Projects</a></li>
               <li><a href="index.html">Home</a></li>
-              <li><a href="#">Projects</a></li>
-              <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
