--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
           <a href="http://michaelwagner.github.io/michael-wagner/" class="logo" style="background-image:url(images/MW-logo-1.png);">
           </a>
           <ul class="nav-links">
-            <li><a href="projects.html" class="nav-menu-link projects-link">PROJECTS</a></li>
+            <li><a href="products.html" class="nav-menu-link projects-link">PROJECTS</a></li>
             <li><a href="contact.html" class="nav-menu-link contact-link">CONTACT</a></li>
           </ul>
           <a class="mobile-nav toggle-nav" href="#sidr">
@@ -29,17 +29,14 @@
           </a>
           <div id="sidr" class="sidr">
             <ul>
-              <li><a href="products.html">Projects</a></li>
               <li><a href="contact.html">Contact</a></li>
+              <li><a href="index.html">Home</a></li>
             </ul>
           </div>
         </div>
       </div>
       <div class="container">
-        <div class="mission-statement">
-          A passionate developer conveying complex ideas
-          through simplicity.
-        </div>
+
         <div class="featured-container">
           <a href="http://michaelwagner.github.io/modern-comforts/"
              target="_blank"
@@ -75,6 +72,7 @@
           </div>
         </div>
       </div>
+
     </div>
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/jquery.sidr.min.js"></script>
