--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
           <a href="http://michaelwagner.github.io/michael-wagner/" class="logo" style="background-image:url(images/MW-logo-1.png);">
           </a>
           <ul class="nav-links">
-            <li><a href="products.html" class="nav-menu-link projects-link">PROJECTS</a></li>
+            <li><a href="projects.html" class="nav-menu-link projects-link">PROJECTS</a></li>
             <li><a href="contact.html" class="nav-menu-link contact-link">CONTACT</a></li>
           </ul>
           <a class="mobile-nav toggle-nav" href="#sidr">
@@ -35,7 +35,7 @@
           </a>
           <div id="sidr" class="sidr">
             <ul>
-              <li><a href="products.html">Projects</a></li>
+              <li><a href="projects.html">Projects</a></li>
               <li><a href="index.html">Home</a></li>
             </ul>
           </div>
