--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </a>
           <div id="sidr" class="sidr">
             <ul>
-              <li><a href="products.html">Projects</a></li>
+              <li><a href="projects.html">Projects</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
