--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
           <a href="http://michaelwagner.github.io/michael-wagner/" class="logo" style="background-image:url(images/MW-logo-1.png);">
           </a>
           <ul class="nav-links">
-            <li><a href="products.html" class="nav-menu-link projects-link">PROJECTS</a></li>
+            <li><a href="projects.html" class="nav-menu-link projects-link">PROJECTS</a></li>
             <li><a href="contact.html" class="nav-menu-link contact-link">CONTACT</a></li>
           </ul>
           <a class="mobile-nav toggle-nav" href="#sidr">
