Make mobile-nav smaller, add relative links to home page.

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <div class="site-wrapper">
       <div class="navbar">
         <div class="nav-container">
-          <a href="http://michaelwagner.github.io/michael-wagner/" class="logo" style="background-image:url(images/MW-logo-1.png);">
+          <a href="index.html" class="logo" style="background-image:url(images/MW-logo-1.png);">
           </a>
           <ul class="nav-links">
             <li><a href="projects.html" class="nav-menu-link projects-link">PROJECTS</a></li>
