Add driftwood project and adjust mobile nav size.

--- a/index.html
+++ b/index.html
@@ -61,10 +61,11 @@
               <div class="spinner">+</div>
             </div>
           </a>
-          <a href="#" class="featured-site">
-            <div class="featured-image">
+          <a href="https://michaelwagner.github.io/driftwood/" class="featured-site">
+            <div class="featured-image"
+                 style="background-image:url(images/driftwood.png)">
             </div>
-            <div class="featured-title">SOMETHING ELSE
+            <div class="featured-title">DRIFTWOOD
               <div class="spinner">+</div>
             </div>
           </a>
