--- a/projects.html
+++ b/projects.html
@@ -59,9 +59,10 @@
             </div>
           </a>
           <a href="#" class="featured-site">
-            <div class="featured-image">
+            <div class="featured-image"
+                 style="background-image:url(images/driftwood.png)">
             </div>
-            <div class="featured-title">SOMETHING ELSE
+            <div class="featured-title">DRIFTWOOD
               <div class="spinner">+</div>
             </div>
           </a>
