Add projects to projects page.

--- a/projects.html
+++ b/projects.html
@@ -35,9 +35,37 @@
           </div>
         </div>
       </div>
-      <div class="container">
+      <div class="projects-wrapper container">
 
-        <div class="featured-container">
+        <div class="projects-container">
+          <a href="http://michaelwagner.github.io/modern-comforts/"
+             target="_blank"
+             class="featured-site">
+            <div class="featured-image"
+                 style="background-image:url(images/modern_comforts.png);">
+            </div>
+            <div class="featured-title">MODERN COMFORTS
+              <div class="spinner">+</div>
+            </div>
+          </a>
+          <a href="https://www.oppia.org/explore/9"
+             target="_blank"
+             class="featured-site">
+            <div class="featured-image"
+                 style="background-image:url(images/oppia-music.png);">
+            </div>
+            <div class="featured-title">OPPIA
+              <div class="spinner">+</div>
+            </div>
+          </a>
+          <a href="#" class="featured-site">
+            <div class="featured-image"
+                 style="background-image:url(images/driftwood.png)">
+            </div>
+            <div class="featured-title">DRIFTWOOD
+              <div class="spinner">+</div>
+            </div>
+          </a>
           <a href="http://michaelwagner.github.io/modern-comforts/"
              target="_blank"
              class="featured-site">
@@ -67,7 +95,7 @@
             </div>
           </a>
         </div>
-        <div class="footer">
+        <div class="projects-footer">
           <div class="footer-row">
             <span class="copyright">Michael Wagner &copy; 2014</span>
           </div>
