Remove hover spinners and add projects.

--- a/index.html
+++ b/index.html
@@ -47,26 +47,17 @@
             <div class="featured-image"
                  style="background-image:url(images/modern_comforts.png);">
             </div>
-            <div class="featured-title">MODERN COMFORTS
-              <div class="spinner">+</div>
-            </div>
           </a>
           <a href="https://www.oppia.org/explore/9"
              target="_blank"
              class="featured-site">
             <div class="featured-image"
-                 style="background-image:url(images/oppia-music.png);">
-            </div>
-            <div class="featured-title">OPPIA
-              <div class="spinner">+</div>
+                 style="background-image:url(images/musicNotesInput.png);">
             </div>
           </a>
           <a href="https://michaelwagner.github.io/driftwood/" class="featured-site">
             <div class="featured-image"
                  style="background-image:url(images/driftwood.png)">
-            </div>
-            <div class="featured-title">DRIFTWOOD
-              <div class="spinner">+</div>
             </div>
           </a>
         </div>
