--- a/projects.html
+++ b/projects.html
@@ -38,32 +38,11 @@
       <div class="projects-wrapper container">
 
         <div class="projects-container">
-          <a href="http://michaelwagner.github.io/modern-comforts/"
+          <a href="https://www.oppia.org"
              target="_blank"
              class="featured-site">
             <div class="featured-image"
-                 style="background-image:url(images/modern_comforts.png);">
-            </div>
-            <div class="featured-title">MODERN COMFORTS
-              <div class="spinner">+</div>
-            </div>
-          </a>
-          <a href="https://www.oppia.org/explore/9"
-             target="_blank"
-             class="featured-site">
-            <div class="featured-image"
-                 style="background-image:url(images/oppia-music.png);">
-            </div>
-            <div class="featured-title">OPPIA
-              <div class="spinner">+</div>
-            </div>
-          </a>
-          <a href="#" class="featured-site">
-            <div class="featured-image"
-                 style="background-image:url(images/driftwood.png)">
-            </div>
-            <div class="featured-title">DRIFTWOOD
-              <div class="spinner">+</div>
+                 style="background-image:url(images/oppia.png);">
             </div>
           </a>
           <a href="http://michaelwagner.github.io/modern-comforts/"
@@ -72,26 +51,29 @@
             <div class="featured-image"
                  style="background-image:url(images/modern_comforts.png);">
             </div>
-            <div class="featured-title">MODERN COMFORTS
-              <div class="spinner">+</div>
+          </a>
+          <a href="http://michaelwagner.github.io/driftwood/" class="featured-site">
+            <div class="featured-image"
+                 style="background-image:url(images/driftwood.png)">
             </div>
           </a>
           <a href="https://www.oppia.org/explore/9"
              target="_blank"
              class="featured-site">
             <div class="featured-image"
-                 style="background-image:url(images/oppia-music.png);">
+                 style="background-image:url(images/musicNotesInput.png);">
             </div>
-            <div class="featured-title">OPPIA
-              <div class="spinner">+</div>
+          </a>
+          <a href="http://michaelwagner.github.io/modern-comforts/"
+             target="_blank"
+             class="featured-site">
+            <div class="featured-image"
+                 style="background-image:url(images/speedread.png);">
             </div>
           </a>
           <a href="#" class="featured-site">
             <div class="featured-image"
-                 style="background-image:url(images/driftwood.png)">
-            </div>
-            <div class="featured-title">DRIFTWOOD
-              <div class="spinner">+</div>
+                 style="background-image:url(images/moncul.png)">
             </div>
           </a>
         </div>
