Add project links.

--- a/projects.html
+++ b/projects.html
@@ -64,7 +64,7 @@
                  style="background-image:url(images/musicNotesInput.png);">
             </div>
           </a>
-          <a href="http://michaelwagner.github.io/modern-comforts/"
+          <a href="http://michaelwagner.github.io/speed-read/"
              target="_blank"
              class="featured-site">
             <div class="featured-image"
