Changed design of index page.

--- a/index.html
+++ b/index.html
@@ -35,36 +35,16 @@
           </div>
         </div>
       </div>
-      <div class="container">
+      <div class="container main-img">
         <div class="mission-statement">
           A passionate developer conveying complex ideas
           through simplicity.
         </div>
-        <div class="featured-container">
-          <a href="http://michaelwagner.github.io/modern-comforts/"
-             target="_blank"
-             class="featured-site">
-            <div class="featured-image"
-                 style="background-image:url(images/modern_comforts.png);">
-            </div>
-          </a>
-          <a href="https://www.oppia.org/explore/9"
-             target="_blank"
-             class="featured-site">
-            <div class="featured-image"
-                 style="background-image:url(images/musicNotesInput.png);">
-            </div>
-          </a>
-          <a href="https://michaelwagner.github.io/driftwood/" class="featured-site">
-            <div class="featured-image"
-                 style="background-image:url(images/driftwood.png)">
-            </div>
-          </a>
-        </div>
-        <div class="footer">
-          <div class="footer-row">
-            <span class="copyright">Michael Wagner &copy; 2014</span>
-          </div>
+
+      </div>
+      <div class="footer">
+        <div class="footer-row">
+          <span class="copyright">Michael Wagner &copy; 2014</span>
         </div>
       </div>
     </div>
