Change contact page to mailto link for the time being.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
           </a>
           <ul class="nav-links">
             <li><a href="projects.html" class="nav-menu-link projects-link">PROJECTS</a></li>
-            <li><a href="contact.html" class="nav-menu-link contact-link">CONTACT</a></li>
+            <!-- TODO (wagnerdmike): once added to server use form
+                 on contact.html page. -->
+            <li><a href="mailto:wagnerdmike@gmail.com?Subject=Hi%20there!" target="_top" class="nav-menu-link contact-link">CONTACT</a></li>
           </ul>
           <a class="mobile-nav toggle-nav" href="#sidr">
             <ul class="nav-collapse">
