--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           </a>
           <ul class="nav-links">
             <li><a href="projects.html" class="nav-menu-link projects-link">PROJECTS</a></li>
-            <!-- TODO (wagnerdmike): once added to server use form
+            <!-- TODO (wagnerdmike): once added to server use contact form
                  on contact.html page. -->
             <li><a href="mailto:wagnerdmike@gmail.com?Subject=Hi%20there!" target="_top" class="nav-menu-link contact-link">CONTACT</a></li>
           </ul>
