Change contact links on off canvas to mailto.

--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,9 @@
           </a>
           <div id="sidr" class="sidr">
             <ul>
-              <li><a href="contact.html">Contact</a></li>
+              <!-- TODO (wagnerdmike): once added to server use contact form
+                   on contact.html page. -->
+              <li><a href="mailto:wagnerdmike@gmail.com?Subject=Hi%20there!" target="_top" class="nav-menu-link contact-link">CONTACT</a></li>
               <li><a href="index.html">Home</a></li>
             </ul>
           </div>
