--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
           <div id="sidr" class="sidr">
             <ul>
               <li><a href="projects.html">Projects</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <!-- TODO (wagnerdmike): once added to server use contact form
+                   on contact.html page. -->
+              <li><a href="mailto:wagnerdmike@gmail.com?Subject=Hi%20there!" target="_top" class="nav-menu-link contact-link">CONTACT</a></li>
             </ul>
           </div>
         </div>
