--- a/projects.html
+++ b/projects.html
@@ -12,28 +12,13 @@
 
   <body>
     <div class="site-wrapper">
-      <div class="navbar">
-        <div class="nav-container">
-          <a href="index.html" class="logo" style="background-image:url(images/MW-logo-1.png);">
-          </a>
-          <ul class="nav-links">
-            <li><a href="projects.html" class="nav-menu-link projects-link">PROJECTS</a></li>
-            <!-- TODO (wagnerdmike): once added to server use contact form
-                 on contact.html page. -->
-            <li><a href="mailto:wagnerdmike@gmail.com?Subject=Hi%20there!" target="_top" class="nav-menu-link contact-link">CONTACT</a></li>
-          </ul>
-          <a class="mobile-nav toggle-nav" href="#sidr">
-            <ul class="nav-collapse">
-              <li></li>
-              <li></li>
-              <li></li>
-            </ul>
-          </a>
+      <script type="text/javascript" src="includes/navigation.js"></script>
+
           <div id="sidr" class="sidr">
             <ul>
               <!-- TODO (wagnerdmike): once added to server use contact form
                    on contact.html page. -->
-              <li><a href="mailto:wagnerdmike@gmail.com?Subject=Hi%20there!" target="_top" class="nav-menu-link contact-link">CONTACT</a></li>
+              <li><a href="mailto:wagnerdmike@gmail.com?Subject=Hi%20there!" target="_top">Contact</a></li>
               <li><a href="index.html">Home</a></li>
             </ul>
           </div>
@@ -92,5 +77,6 @@
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/jquery.sidr.min.js"></script>
     <script src="js/menu-toggle.js"></script>
+    <script type="text/javascript" src="includes/google-analytics.js"></script>
   </body>
 </html>
