Add links to project page and update images.

--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,9 @@
                  style="background-image:url(images/modern_comforts.png);">
             </div>
           </a>
-          <a href="http://michaelwagner.github.io/driftwood/" class="featured-site">
+          <a href="http://michaelwagner.github.io/driftwood/"
+             target="_blank"
+             class="featured-site">
             <div class="featured-image"
                  style="background-image:url(images/driftwood.png)">
             </div>
@@ -60,7 +62,9 @@
                  style="background-image:url(images/speedread.png);">
             </div>
           </a>
-          <a href="#" class="featured-site">
+          <a href="http://michaelwagner.github.io/moncul/"
+             target="_blank"
+             class="featured-site">
             <div class="featured-image"
                  style="background-image:url(images/moncul.png)">
             </div>
