--- a/projects.html
+++ b/projects.html
@@ -34,6 +34,12 @@
                  style="background-image:url(images/oppia.png);">
             </div>
           </a>
+          <a href="foodiegram.co"
+             target="_blank"
+             class="featured-site">
+             <div class="featured-image"
+                  style="background-image:url(images/foodiegram.png);">
+             </div></a>
           <a href="http://michaelwagner.github.io/modern-comforts/"
              target="_blank"
              class="featured-site">
