Update the date.

--- a/projects.html
+++ b/projects.html
@@ -34,13 +34,12 @@
                  style="background-image:url(images/oppia.png);">
             </div>
           </a>
-          <a href="http://www.foodiegram.co"
+          <a href="foodiegram.co"
              target="_blank"
              class="featured-site">
              <div class="featured-image"
                   style="background-image:url(images/foodiegram.png);">
-             </div>
-          </a>
+             </div></a>
           <a href="http://michaelwagner.github.io/modern-comforts/"
              target="_blank"
              class="featured-site">
@@ -81,10 +80,9 @@
       <div class="projects-footer">
         <hr>
         <div class="footer-row">
-          <span class="copyright">Michael Wagner &copy; 2014</span>
+          <span class="copyright">Michael Wagner &copy; 2015</span>
         </div>
       </div>
-
     </div>
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/jquery.sidr.min.js"></script>
