--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
              target="_blank"
              class="featured-site">
              <div class="featured-image"
-                  style="background-image:url(images/foodiegram.png);">
+                  style="background-image:url(images/foodie-mob.png);">
              </div></a>
           <a href="http://michaelwagner.github.io/modern-comforts/"
              target="_blank"
