--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
              target="_blank"
              class="featured-site">
              <div class="featured-image"
-                  style="background-image:url(images/foodie-mob.png);">
+                  style="background-image:url(images/foodie-mobile.png);">
              </div></a>
           <a href="http://michaelwagner.github.io/modern-comforts/"
              target="_blank"
@@ -68,13 +68,13 @@
                  style="background-image:url(images/speedread.png);">
             </div>
           </a>
-          <a href="http://michaelwagner.github.io/moncul/"
+          <!-- <a href="http://michaelwagner.github.io/moncul/"
              target="_blank"
              class="featured-site">
             <div class="featured-image"
                  style="background-image:url(images/moncul.png)">
             </div>
-          </a>
+          </a> -->
         </div>
       </div>
       <div class="projects-footer">
