Remove old pictures.

--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
                  style="background-image:url(images/oppia.png);">
             </div>
           </a>
-          <a href="foodiegram.co"
+          <a href="www.foodiegram.co"
              target="_blank"
              class="featured-site">
              <div class="featured-image"
