Add github and linkedin links to main page.

--- a/index.html
+++ b/index.html
@@ -30,32 +30,20 @@
           through simplicity.
         </div>
       </div>
-      <div class="about">
-        <h1 class="about-title">Michael Wagner</h1>
-        <img class="about-image" src="images/mikeLight.jpg" alt="" />
-        <p class="about-text">
-          In my never-ending pursuit of knowledge and experience,
-          I have traveled many roads and worn many hats.
-          I feel these experiences make me a strong candidate to
-          find the unique and elegant solutions you desire.
-          <br><br>
-          At Oppia, I have had the continued opportunity to work
-          and share ideas with a team of Google developers and,
-          through this interaction, their processes and standards
-          have been embedded into my work. The music staff widget
-          I created for this project is strongly suited to teach music
-          theory and complex harmony in an intuitive and fun way.
-          Having just completed App Academy’s intense boot camp,
-          I have expanded my knowledge base immensely while also applying
-          these skills daily to solve common problems that developers often
-          encounter. Additionally, my experiences as a musician have taught
-          me the life skills needed to interact with team-members and clients
-          in a way that brings out the best in people. I always strive for
-          clarity and have found that the simplest components are usually
-          best for expressing the most complex ideas.
-        </p>
+      <div class="footer">
+        <div class="footer-links">
+          <a class="link-button github"
+             target="_blank"
+             href="https://github.com/michaelwagner">
+            <img src="images/github.svg" alt="" />
+          </a>
+          <a class="link-button linkedin"
+             target="_blank"
+             href="https://www.linkedin.com/pub/michael-wagner/b0/a5/39a">
+            <img src="images/linkedin.png" alt="" />
+          </a>
+        </div>
       </div>
-    </div>
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/jquery.sidr.min.js"></script>
     <script src="js/menu-toggle.js"></script>
